tests/rosetta/transpiler/erl/angles-geometric-normalization-and-conversion.error
exit status 127
degrees normalized_degs gradians mils radians
-2 -2 -2.2222222222222223 -35.55555555555556 -0.03490658503988659
-1 -1 -1.1111111111111112 -17.77777777777778 -0.017453292519943295
0 0 0.0 0.0 0.0
1 1 1.1111111111111112 17.77777777777778 0.017453292519943295
2 2 2.2222222222222223 35.55555555555556 0.03490658503988659
escript: exception error: an error occurred when evaluating an arithmetic expression
  in operator  rem/2
     called as 6.2831853 rem 360
  in call from main:d2d/1 (/workspace/mochi/tests/rosetta/transpiler/erl/angles-geometric-normalization-and-conversion.erl, line 10)
  in call from main:'-main/0-Fun_loop/2-0-'/2 (/workspace/mochi/tests/rosetta/transpiler/erl/angles-geometric-normalization-and-conversion.erl, line 96)
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/angles-geometric-normalization-and-conversion.erl, line 100)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
